--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@ body {
 	background-color: black;
 	overflow: hidden;
 	touch-action: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
 }
 
 #canvas {
 	display: block;
+	width: 1024px;
+	height: 600px;
+	border: 2px solid #333;
+	border-radius: 8px;
 }
 
 #canvas:focus {
@@ -89,9 +99,18 @@ body {
 	text-align: center;
 	z-index: 1;
 }
+
+@media (max-width: 1100px) {
+	#canvas {
+		width: 100vw;
+		height: 60vw;
+		max-width: 1024px;
+		max-height: 600px;
+	}
+}
 		</style>
-		<link id="-gd-engine-icon" rel="icon" type="image/png" href="firstgame.icon.png" />
-<link rel="apple-touch-icon" href="firstgame.apple-touch-icon.png"/>
+		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
+<link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
 
 	</head>
 	<body>
@@ -104,14 +123,14 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" class="show-image--true fullsize--true use-filter--true" src="firstgame.png" alt="">
+			<img id="status-splash" class="show-image--true fullsize--true use-filter--true" src="index.png" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
 
-		<script src="firstgame.js"></script>
+		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"firstgame","experimentalVK":false,"fileSizes":{"firstgame.pck":26438784,"firstgame.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":26464944,"index.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
