--- a/index.html
+++ b/index.html
@@ -16,20 +16,10 @@ body {
 	background-color: black;
 	overflow: hidden;
 	touch-action: none;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	margin: 0;
-	padding: 0;
 }
 
 #canvas {
 	display: block;
-	width: 1024px;
-	height: 600px;
-	border: 2px solid #333;
-	border-radius: 8px;
 }
 
 #canvas:focus {
@@ -99,19 +89,10 @@ body {
 	text-align: center;
 	z-index: 1;
 }
-
-@media (max-width: 1100px) {
-	#canvas {
-		width: 100vw;
-		height: 60vw;
-		max-width: 1024px;
-		max-height: 600px;
-	}
-}
 		</style>
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
 <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
-
+here we go
 	</head>
 	<body>
 		<canvas id="canvas">
