--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@ body {
 	background-color: black;
 	overflow: hidden;
 	touch-action: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
 }
 
 #canvas {
 	display: block;
+	max-width: 800px;
+	max-height: 600px;
+	width: 100%;
+	height: auto;
 }
 
 #canvas:focus {
