--- a/index.html
+++ b/index.html
@@ -18,8 +18,27 @@ body {
 	touch-action: none;
 }
 
+#game-container {
+	/* Target a smaller, contained viewport for the game */
+	width: 640px;
+	height: 360px;
+	max-width: 90vw;
+	max-height: 60vh;
+	margin: 0 auto;
+	position: relative;
+	display: block;
+	/* Center on page */
+	top: 50%;
+	transform: translateY(-50%);
+}
+
 #canvas {
 	display: block;
+	/* Fit the container dimensions */
+	width: 100%;
+	height: 100%;
+	/* Keep pixels crisp for pixel art */
+	image-rendering: pixelated;
 }
 
 #canvas:focus {
@@ -95,9 +114,11 @@ body {
 here we go
 	</head>
 	<body>
-		<canvas id="canvas">
+		<div id="game-container">
+			<canvas id="canvas">
 			Your browser does not support the canvas tag.
-		</canvas>
+			</canvas>
+		</div>
 
 		<noscript>
 			Your browser does not support JavaScript.
