--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 		<title>firstgame</title>
 		<style>
-html, body, #canvas {
+html, body {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	height: 100%;
 }
 
 body {
@@ -16,10 +17,23 @@ body {
 	background-color: black;
 	overflow: hidden;
 	touch-action: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#game-container {
+	width: 95vw;
+	max-height: 90vh;
+	aspect-ratio: 16 / 9;
+	position: relative;
 }
 
 #canvas {
 	display: block;
+	width: 100%;
+	height: 100%;
+	image-rendering: pixelated;
 }
 
 #canvas:focus {
@@ -92,12 +106,13 @@ body {
 		</style>
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
 <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
-here we go
 	</head>
 	<body>
-		<canvas id="canvas">
-			Your browser does not support the canvas tag.
-		</canvas>
+		<div id="game-container">
+			<canvas id="canvas">
+				Your browser does not support the canvas tag.
+			</canvas>
+		</div>
 
 		<noscript>
 			Your browser does not support JavaScript.
