Clean up project: remove unused files and assets, keep only essential files

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 		<title>firstgame</title>
 		<style>
-html, body {
+html, body, #canvas {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	height: 100%;
 }
 
 body {
@@ -17,23 +16,10 @@ body {
 	background-color: black;
 	overflow: hidden;
 	touch-action: none;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-#game-container {
-	width: 95vw;
-	max-height: 90vh;
-	aspect-ratio: 16 / 9;
-	position: relative;
 }
 
 #canvas {
 	display: block;
-	width: 100%;
-	height: 100%;
-	image-rendering: pixelated;
 }
 
 #canvas:focus {
@@ -106,13 +92,12 @@ body {
 		</style>
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
 <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
+here we go
 	</head>
 	<body>
-		<div id="game-container">
-			<canvas id="canvas">
-				Your browser does not support the canvas tag.
-			</canvas>
-		</div>
+		<canvas id="canvas">
+			Your browser does not support the canvas tag.
+		</canvas>
 
 		<noscript>
 			Your browser does not support JavaScript.
@@ -126,7 +111,7 @@ body {
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":0,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":7840672,"index.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":7840928,"index.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
